--- a/css/styles.css
+++ b/css/styles.css
@@ -58,11 +58,26 @@ body{
 .container{
     padding: 0px 30px;
     color: white;
+    font-family: 'Muli', sans-serif;
 }
 .container__h1{
     display: flex;
   justify-content: center;
+  font-size: 90px;
+  animation-duration: 2.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
 }
+
+@keyframes pulse {
+    0% {transform: scale(1);}
+    50% {transform: scale(1.1);}
+    100% {transform: scale(1);}
+  }
+  .pulse {
+    animation-name: pulse;
+    animation-duration: 1s;
+  }
 
 .container__p{
     display: flex;
