--- a/css/styles.css
+++ b/css/styles.css
@@ -1,99 +1,53 @@
-body{
+body {
     margin: 0;
-    background-color: #2FBF96;
     font-family: 'Muli', sans-serif;
-}
-.header {
     width: 100%;
-    height: 80px;
-    background-color: #2FBF96;
+    height: 100vh;
+    background: linear-gradient(#2FBF96, purple) ;
+}
+
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.header__img{
+
+.header__img {
     width: 200px;
     margin-top: 10px;
     margin-left: 10px;
 }
-.header__menu{
-    margin-right: 30px;
+
+.container {
+    text-align: center;
+    color: white;
 }
-.header__menu ul{
-    display: none;
-    list-style: none;
-    padding: 0px;
-    width: 100px;
+
+.container__h1 {
+    font-size: 90px;
+    animation-duration: 2.5s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
+}
+
+.pulse {
+    animation-name: pulse;
+    animation-duration: 1s;
+}
+
+.footer {
     position: absolute;
-    text-align: right;
-    margin: 0px 0px 0px -25px;
-}
-.header__menu:hover ul, ul:hover{
-    display: block;
-}
-.header__menu li{
-    margin: 10px 0px;
-}
-.header__menu li a{
-    color:white;
-    text-decoration: none;
-}
-.header__menu li a:hover{
-    text-decoration: underline;
-}
-.header__menu--profile{
-    margin-right: 8px;
-    display: flex;
-    align-items: center;
-}
-.header__menu--profile img{
-    margin-right: 8px;
-    width: 40px;
-    height: 40px;
-}
-.header__menu--profile p{
-    margin: 0px;
+    bottom: 0;
+    width: 100%;
     color: white;
 }
-.container{
-    padding: 0px 30px;
-    color: white;
-    font-family: 'Muli', sans-serif;
-}
-.container__h1{
-    display: flex;
-  justify-content: center;
-  font-size: 90px;
-  animation-duration: 2.5s;
-  animation-fill-mode: both;
-  animation-iteration-count: infinite;
+
+.footer ul {
+    list-style: none;
 }
 
 @keyframes pulse {
-    0% {transform: scale(1);}
-    50% {transform: scale(1.1);}
-    100% {transform: scale(1);}
-  }
-  .pulse {
-    animation-name: pulse;
-    animation-duration: 1s;
-  }
-
-.container__p{
-    display: flex;
-  justify-content: center;
-}
-.footer{
-    position:absolute;
-   bottom:0;
-   width:100%;
-   color: white;
-}
-.footer ul{
-    list-style: none;
-    display: flex;
-}
-
-.footer ul li{
-    padding: 0px 10px;
+    0% { transform: scale(0.4); }
+    50% { transform: scale(.9s); }
+    100% { transform: scale(1); }
 }
